detect when class owning static field has default visibility