@@ -16,7 +16,6 @@
  */
 package org.sonar.java.checks;
 
-import java.util.Collections;
 import java.util.List;
 import org.sonar.check.Rule;
 import org.sonar.java.checks.helpers.QuickFixHelper;
@@ -26,9 +25,11 @@ import org.sonar.plugins.java.api.IssuableSubscriptionVisitor;
 import org.sonar.plugins.java.api.semantic.MethodMatchers;
 import org.sonar.plugins.java.api.semantic.Symbol;
 import org.sonar.plugins.java.api.semantic.Type;
+import org.sonar.plugins.java.api.tree.CompilationUnitTree;
 import org.sonar.plugins.java.api.tree.ExpressionTree;
 import org.sonar.plugins.java.api.tree.MemberSelectExpressionTree;
 import org.sonar.plugins.java.api.tree.MethodInvocationTree;
+import org.sonar.plugins.java.api.tree.PackageDeclarationTree;
 import org.sonar.plugins.java.api.tree.Tree;
 
 @Rule(key = "S3252")
@@ -40,30 +41,47 @@ public class StaticMemberAccessCheck extends IssuableSubscriptionVisitor {
     .withAnyParameters()
     .build();
 
+  private String currentPackage = "";
+
   @Override
   public List<Tree.Kind> nodesToVisit() {
-    return Collections.singletonList(Tree.Kind.MEMBER_SELECT);
+    return List.of(Tree.Kind.MEMBER_SELECT, Tree.Kind.COMPILATION_UNIT);
   }
 
 
   @Override
   public void visitNode(Tree tree) {
-    MemberSelectExpressionTree mse = (MemberSelectExpressionTree) tree;
-    Symbol symbol = mse.identifier().symbol();
-    if (symbol.isStatic()  && !isListOrSetOf(mse)) {
-      ExpressionTree expression = mse.expression();
-      Type staticType = symbol.owner().type();
-      Type expressionType = expression.symbolType();
-      if (!staticType.isUnknown() && !expressionType.isUnknown()
-        && !expressionType.erasure().equals(staticType.erasure())) {
-        QuickFixHelper.newIssue(context)
-          .forRule(this)
-          .onTree(mse.identifier())
-          .withMessage("Use static access with \"%s\" for \"%s\".", staticType.fullyQualifiedName(), symbol.name())
-          .withQuickFix(() -> quickFix(expression, staticType))
-          .report();
+    if(tree instanceof CompilationUnitTree file){
+      PackageDeclarationTree packageDecl = file.packageDeclaration();
+      currentPackage = packageDecl==null ? "" : packageDecl.packageName().toString();
+    }else{
+      MemberSelectExpressionTree mse = (MemberSelectExpressionTree) tree;
+      Symbol symbol = mse.identifier().symbol();
+      if (symbol.isStatic()  && !isListOrSetOf(mse)) {
+        ExpressionTree expression = mse.expression();
+
+        Symbol owner = symbol.owner();
+        Type staticType = owner.type();
+        Type expressionType = expression.symbolType();
+
+        if (!staticType.isUnknown() && !expressionType.isUnknown()
+          && !expressionType.erasure().equals(staticType.erasure())
+          && (currentPackage.equals(classPackage(expressionType)) || owner.isPublic())
+        ) {
+          QuickFixHelper.newIssue(context)
+            .forRule(this)
+            .onTree(mse.identifier())
+            .withMessage("Use static access with \"%s\" for \"%s\".", staticType.fullyQualifiedName(), symbol.name())
+            .withQuickFix(() -> quickFix(expression, staticType))
+            .report();
+        }
       }
     }
+  }
+
+  private static String classPackage(Type classType){
+    int endPackage = classType.fullyQualifiedName().lastIndexOf('.');
+    return endPackage==-1 ? "" : classType.fullyQualifiedName().substring(0, endPackage);
   }
 
   private static boolean isListOrSetOf(MemberSelectExpressionTree mse) {
